; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_txg.c_txg_thread_wait.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_txg.c_txg_thread_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32*, i32*, i64)* @txg_thread_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @txg_thread_wait(%struct.TYPE_3__* %0, i32* %1, i32* %2, i64 %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @CALLB_CPR_SAFE_BEGIN(i32* %9)
  %11 = load i64, i64* %8, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %4
  %14 = load i32*, i32** %7, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = call i64 (...) @ddi_get_lbolt()
  %18 = load i64, i64* %8, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i32 @cv_timedwait_sig(i32* %14, i32* %16, i64 %19)
  br label %26

21:                                               ; preds = %4
  %22 = load i32*, i32** %7, align 8
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = call i32 @cv_wait_sig(i32* %22, i32* %24)
  br label %26

26:                                               ; preds = %21, %13
  %27 = load i32*, i32** %6, align 8
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = call i32 @CALLB_CPR_SAFE_END(i32* %27, i32* %29)
  ret void
}

declare dso_local i32 @CALLB_CPR_SAFE_BEGIN(i32*) #1

declare dso_local i32 @cv_timedwait_sig(i32*, i32*, i64) #1

declare dso_local i64 @ddi_get_lbolt(...) #1

declare dso_local i32 @cv_wait_sig(i32*, i32*) #1

declare dso_local i32 @CALLB_CPR_SAFE_END(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
